--- a/packages/extension/src/app/index.html
+++ b/packages/extension/src/app/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + Preact + TS</title>
   </head>
-  <body>
-    <div id="expanded-app"></div>
+  <body class="font-sans text-base">
+    <div id="app"></div>
     <script type="module" src="./main.tsx"></script>
   </body>
 </html>
