Add keyrings redux state, configure sandbox env for ses, define tailwind types

--- a/packages/extension/src/app/index.html
+++ b/packages/extension/src/app/index.html
@@ -9,5 +9,6 @@
   <body class="font-sans text-base">
     <div id="app"></div>
     <script type="module" src="./main.tsx"></script>
+    <iframe width="0px" height="0px" src="../sandbox/sandbox.html"></iframe>
   </body>
 </html>
